# fantastic-octo-engine

./: .clang-format  CMakeLists.txt  README.md
ExMath/: CMakeLists.txt  ExMath.hpp
ExMath/inc/: ExMath_traits.hpp
ExMath/src/: ExMath.cpp
examples/: CMakeLists.txt
examples/exa_1/: CMakeLists.txt  exa_demo.cpp
tests/: CMakeLists.txt
tests/tst_ExMath/: CMakeLists.txt  tst_ExMath.cpp  tst_main.cpp
